[package]
name = "lau-calm-noether"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/SuperInstance/lau-calm-noether"
description = "CALM = Noether — coordination-free learning rules are exactly permutation-symmetric rules with conserved charges"

[dependencies]
serde = { version = "1", features = ["derive"] }
nalgebra = "0.33"
rand = "0.9"

[dev-dependencies]
